@@ -42,9 +42,9 @@ int main (int argc, char* argv[])
    // If this fails, we're out of luck.
    try
    {
-      if ( mgr.init("cxx_client_test", argc, argv).success() )
+      if ( mgr.init("cxx_client_test", argc, argv) )
       {
-         vpr::ReturnStatus status;
+         bool status(false);
 
          // Once the CORBA Manager is initialized, we need to create a
          // Subject Manager.  This will hold our StringSubject servant.
@@ -54,7 +54,7 @@ int main (int argc, char* argv[])
 
             // If we were able to create the Subject Manager, now we register
             // our objects with it.
-            if ( status.success() )
+            if ( status )
             {
                // Add a test informational item to the Subject Manager.
                mgr.getSubjectManager()->addInfoItem("App Type",
@@ -89,7 +89,7 @@ int main (int argc, char* argv[])
                << "' when trying to register!\n" << vprDEBUG_FLUSH;
          }
 
-         if ( ! status.success() )
+         if ( ! status )
          {
             vprDEBUG(vprDBG_ALL, vprDBG_CRITICAL_LVL)
                << "Failed to register Subject Manager instance\n"
