@@ -1,5 +1,9 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2006-11-15 patrick     Replaced the use of vpr::ReturnStatus with bool in
+                       tweek::CorbaManager, tweek::SubjectManagerImpl, and
+                       tweek::CorbaService.
+                       NEW VERSION: 1.1.10
 2006-10-01 patrick     Updated for VPR 1.1.35.
                        NEW VERSION: 1.1.9
 2006-10-01 patrick     Updated for VPR 1.1.31.
